syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service ApplicantProfile {
	rpc CreateApplicantProfile(ApplicantProfileReply) returns (google.protobuf.Empty);
	rpc DeleteApplicantProfile(ApplicantProfileReply) returns (google.protobuf.Empty);
	rpc ReadApplicantProfile(ApplicantProfileRequest) returns (ApplicantProfileReply);
	rpc UpdateApplicantProfile(ApplicantProfileReply) returns (google.protobuf.Empty);
}

message ApplicantProfileRequest {
	string id = 1;
}

message ApplicantProfileReply {
	string id = 1;
	string login = 2;
	double current_salary = 3;
	double current_rate = 4;
	string currency = 5;
	string country = 6;
	string province = 7;
	string street = 8;
	string city = 9;
	string postal_code = 10;
}